Wed Nov 24 01:01:31 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (io_read): [ruby-dev:24952]

	* configure.in, io.c: cancel [ ruby-Patches-1074 ].

Tue Nov 23 08:09:50 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/menu.rb: improve usability of TkOptionMenubutton

Tue Nov 23 02:00:21 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* file.c (rb_file_chown): [ruby-dev:24949]

Tue Nov 23 00:10:48 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* file.c (rb_file_chown): integer conversion should be prior to
	  GetOpenFile().  [ruby-dev:24947]

	* file.c (rb_file_truncate): ditto.

	* file.c (rb_file_s_truncate): ditto.

	* dir.c (dir_seek): use NUM2OFFT().

	* misc/ruby-mode.el (ruby-non-block-do-re): [ruby-core:03719]

Mon Nov 22 22:33:02 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_rb.rb (RDoc::parse_require): Don't use names
	  of variables or constants when parsing 'require'

Mon Nov 22 00:13:35 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* dir.c (dir_seek): should retrieve dir_data after NUM2INT().
	  [ruby-dev:24941]

Sat Nov 20 23:57:33 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/README (et al): Add a new directive, :section:, and
	  change the output format to accomodate. :section: allows to to
	  group together methods, attributes, constants, etc under
	  headings in the output. If used, a table of contents is
	  generated.

Sat Nov 20 23:56:54 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/options.rb (Options::parse): Force --inline-source if
	  --one-file option given

Sat Nov 20 23:55:19 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_splice): should place index wrapping after
	  possible modification.  [ruby-dev:24940]

Sat Nov 20 23:25:12 2004  Minero Aoki  <aamine@loveruby.net>

	* io.c (rb_io_getline): f.gets("") did not work. [ruby-core:03771]

	* test/ruby/test_io.rb (test_gets_rs): test it.

Sat Nov 20 22:55:09 2004  WATANABE Hirofumi  <eban@ruby-lang.org>
