@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT()
 
-AC_PREREQ(2.50)
+AC_PREREQ(2.53)
 
 AC_DEFUN(RUBY_MINGW32,
 [case "$host_os" in
